# vrsa

./: CMakeLists.txt  README.md
doc/: dbgen.sh  uml.dia
share/vrsa/models/BackButton/: BackButton.blend  BackButton.mtl
share/vrsa/models/Background/: Background.blend  Background.mtl
share/vrsa/models/BlackKey/: BlackKey.blend  BlackKey.mtl
share/vrsa/models/BlackKey/highlight/: BlackKey.mtl
share/vrsa/models/ExamButton/: ExamButton.blend  ExamButton.mtl
share/vrsa/models/ExitButton/: ExitButton.blend  ExitButton.mtl
share/vrsa/models/HelpButton/: HelpButton.blend  HelpButton.mtl
share/vrsa/models/IntervalSlice/: IntervalSlice.blend  IntervalSlice.mtl
share/vrsa/models/MusicRoom/: MusicRoom.blend  MusicRoom.mtl
share/vrsa/models/MusicRoomBaked/: MusicRoom.blend  MusicRoom.mtl  MusicRoom_lightmap.mtl
share/vrsa/models/NextButton/: NextButton.blend  NextButton.mtl
share/vrsa/models/OctaveButton/: OctaveButton.blend  OctaveButton.mtl
share/vrsa/models/PianoButton/: PianoButton.blend  PianoButton.mtl
share/vrsa/models/Pointer/: Pointer.mtl
share/vrsa/models/VrButton/: VrButton.blend  VrButton.mtl
share/vrsa/models/WhiteKey/: WhiteKey.blend  WhiteKey.mtl
share/vrsa/shaders/: default.glsl  font.glsl  gui.glsl  key.glsl  openhmd.glsl  vrbutton.glsl
src/hydra/: Animation.cpp  Camera.cpp  Collider.cpp  Component.cpp  Entity.cpp  Environment.cpp  Font.cpp  FontRenderer.cpp  Gui.cpp  Keyboard.cpp  Material.cpp  Model.cpp  ModelRenderer.cpp  Mouse.cpp  RenderTarget.cpp  Shader.cpp  Sound.cpp  SoundSource.cpp  Texture.cpp  Transform.cpp  Util.cpp  World.cpp  WorldCollider.cpp  WorldRenderer.cpp  hydra.h
src/hydra/resources/: button_texture.h  null_texture.h
src/rend/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Exception.cpp  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  mathutil.h  rend.h
src/sr1/: observer_ptr  shared_ptr  weak_ptr  zero_initialized
src/vrsa/: ButtonBar.cpp  ButtonBar.h  CompleteScreen.cpp  CompleteScreen.h  Database.cpp  Database.h  Fade.cpp  Fade.h  HelpScreen.cpp  HelpScreen.h  IntervalSelect.cpp  IntervalSelect.h  IntroScreen.cpp  IntroScreen.h  Key.cpp  Key.h  KeyHelper.cpp  KeyHelper.h  MainScreen.cpp  MainScreen.h  MenuScreen.cpp  MenuScreen.h  Octave.cpp  Octave.h  OctaveScreen.cpp  OctaveScreen.h  Piano.cpp  Piano.h  Player.cpp  Player.h  Pointer.cpp  Pointer.h  QuestionScreen.cpp  QuestionScreen.h  VrButton.cpp  VrButton.h  VrManager.cpp  VrManager.h  main.cpp
